--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "thumbails",
+  "name": "vuejs",
   "authors": [
     "philopian <pdotwdot@gmail.com>"
   ],
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "jquery": "^2.2.0",
-    "vue": "^2.0.3"
+    "vue": "^2.0.3",
+    "bluebird": "^3.4.6"
   },
   "overrides": {
     "bootstrap": {
