--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "wiredep": "^3.0.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.17.5",
+    "chalk": "^1.1.3",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.3.0",
+    "path": "^0.12.7",
+    "run-sequence": "^1.2.2"
   }
 }
