--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,9 @@
   ],
   "dependencies": {
     "jquery": "^2.2.0",
-    "vue": "^2.0.3",
-    "bluebird": "^3.4.6"
+    "vue": "1.0.0",
+    "bluebird": "^3.4.6",
+    "vue-router": "0.7.13"
   },
   "overrides": {
     "bootstrap": {
@@ -88,6 +89,11 @@
     "vue": {
       "main": [
         "dist/vue.js"
+      ]
+    },
+    "vue-router": {
+      "main": [
+        "dist/vue-router.js"
       ]
     }
   }
